2008-07-26  Johan Dahlin  <johan@gnome.org>

	reviewed by: <delete if not using a buddy>

	* glib/pyglib-python-compat.h:
	* glib/pyglib.h:
	Make a few macros public

	* gobject/Makefile.am:
	* gobject/gobjectmodule.c (init_gobject):
	* gobject/pyginterface.c (pyg_interface_init),
	(pyg_interface_free), (pyg_register_interface),
	(pyg_register_interface_info), (pyg_lookup_interface_info),
	(pygobject_interface_register_types):
	* gobject/pyginterface.h:
	* gobject/pygobject-private.h:
	* gobject/pygobject.c:
	Move GInterface wrapper into its own file

2008-07-26  Johan Dahlin  <johan@gnome.org>

	* glib/Makefile.am:
	Also export PyInit_glib
	* glib/__init__.py:
	import glib._glib instead of just _glib
	* glib/pyglib-python-compat.h:
	* glib/pygoptioncontext.c (pyg_option_context_parse):
	* glib/pygsource.c (source_repr), (pyg_source_attach),
	(pyg_source_get_priority), (pyg_source_set_priority),
	(pyg_source_get_id), (pyg_source_prepare), (pyg_poll_fd_repr):
	* glib/pygspawn.c (pyg_pid_close), (pyg_pid_free), (pyg_pid_new),
	(pyglib_spawn_async), (pyglib_spawn_register_types):
	Go over the rest and replace missing symbols on python3.
	the glib module successfully compiles and runs now.

2008-07-26  Johan Dahlin  <johan@gnome.org>

	* glib/pygiochannel.c (py_io_channel_shutdown),
	(py_io_channel_set_buffer_size), (py_io_channel_get_buffer_size),
	(py_io_channel_set_buffered), (py_io_channel_get_buffered),
	(py_io_channel_set_encoding), (py_io_channel_get_encoding),
	(py_io_channel_read_chars), (py_io_channel_write_chars),
	(py_io_channel_write_lines), (py_io_channel_flush),
	(py_io_channel_set_flags), (py_io_channel_get_flags),
	(py_io_channel_get_buffer_condition),
	(py_io_channel_set_close_on_unref), (py_io_channel_add_watch),
	(py_io_channel_win32_poll), (py_io_channel_win32_make_pollfd),
	(py_io_channel_read_line), (py_io_channel_read_lines),
	(py_io_channel_seek), (py_io_channel_init):
	* glib/pyglib.c (pyglib_gerror_exception_check):